# geoclue-prometheus-exporter

./: .copilot-config.json  .copilotignore  .gitignore  .mcp-config.json  CHANGELOG.md  Cargo.toml  README.md  flake.nix  geoclue-prometheus-exporter.code-workspace  nixos-module-alloy.nix  nixos-module.nix  release-please-config.json
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  release-please.yml  trivy.yml
docs/: MCP_SETUP.md
mcp/: README.md  claude-desktop-config.json  config.json  nixos-module.nix  package.json  test.js
mcp/servers/: config-server.js  metrics-server.js  monitoring-server.js
nix/: test-lib.nix
scripts/: validate-mcp-setup.sh
src/: main.rs  tests.rs
tests/: integration_tests.rs  metrics_tests.rs  property_tests.rs  vm-test.nix
