[package]
name = "geoclue-prometheus-exporter"
version = "0.1.0"
edition = "2021"
authors = ["shift <shift@shift.id>"]
description = "A Prometheus exporter for GeoClue2 location data"
license = "MIT"
repository = "https://github.com/shift/geoclue-prometheus-exporter"
readme = "README.md"
keywords = ["geoclue", "prometheus", "exporter", "location", "metrics"]
categories = ["command-line-utilities", "monitoring-tools"]

# Keep original dependencies with their exact versions
[dependencies]
anyhow = "1.0.75"
chrono = "0.4.31"
clap = { version = "4.4.6", features = ["derive"] }
futures-util = "0.3.28"
metrics = "0.24.0"
metrics-exporter-prometheus = "0.13.0"
metrics-process = "2.4.0"
tokio = { version = "1.36.0", features = ["full"] }
zbus = "4.1.2"

# Add test dependencies without altering existing ones
[dev-dependencies]
assert_cmd = "2.0.12"
predicates = "3.0.4"
tempfile = "3.8.1"

[build-dependencies]
chrono = "0.4.31"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
opt-level = 3
