[package]
name = "geoclue-prometheus-exporter"
version = "0.5.0"
edition = "2021"
authors = ["Vincent Palmer <shift@someone.section.me>"]

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.31"
clap = { version = "4.4.6", features = ["derive"] }
futures-util = "0.3.28"
metrics = "0.24.2"
metrics-exporter-prometheus = "0.17.1"
metrics-process = "2.4.0"
tokio = { version = "1.36.0", features = ["full"] }
zbus = "5.7.1"

[dev-dependencies]
assert_cmd = "2.0.12"
predicates = "3.0.4"
tokio-test = "0.4.4"
tempfile = "3.8.1"
mockall = "0.12.1"
proptest = "1.4.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
serial_test = "3.1.1"

[build-dependencies]
chrono = "0.4.31"
